# PicoPebble

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_CN.md  build_run.sh  format.sh
data/iris/test_features/: part-00000  part-00001  part-00002  part-00003
data/iris/test_labels/: part-00000  part-00001  part-00002  part-00003
data/iris/train_features/: part-00000  part-00001  part-00002  part-00003
data/iris/train_labels/: part-00000  part-00001  part-00002  part-00003
data/uniform_sample_size_per_part/test_features/: part-00000  part-00001  part-00002  part-00003
data/uniform_sample_size_per_part/test_labels/: part-00000  part-00001  part-00002  part-00003
data/uniform_sample_size_per_part/train_features/: part-00000  part-00001  part-00002  part-00003
data/uniform_sample_size_per_part/train_labels/: part-00000  part-00001  part-00002  part-00003
docs/: backward.md
examples/: dnn.cpp
include/Activations/: ReLU.hpp  Softmax.hpp
include/Common/: Common.hpp  GlobalState.hpp  common.hpp  globalState.hpp
include/Common/mpi/: MpiController.hpp  TypeTraits.hpp  mpiController.hpp  typeTraits.hpp
include/DataLoader/: DataLoader.hpp
include/Layers/: Linear.hpp
include/Losses/: MSE.hpp
include/Metrics/: Metrics.hpp
include/Module/: Module.hpp
include/Sequential/: Sequential.hpp
include/Trainers/: Trainer.hpp
src/Activations/: ReLU.cpp  Softmax.cpp
src/Common/mpi/: TypeTraits.cpp  typeTraits.cpp
src/DataLoader/: DataLoader.cpp
src/Layers/: Linear.cpp
src/Losses/: MSE.cpp
src/Metrics/: Metrics.cpp
src/Sequential/: Sequential.cpp
src/Trainers/: Trainer.cpp  TrainerTemplateImpl.hpp
